--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,5 +40,9 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: view 
+    incremental_load:
+      +materialized: table
+    snapshots_load:
+      +materialized: table
 
       
