--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,8 +35,16 @@ clean-targets:         # directories to be removed by `dbt clean`
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 
+
+on-run-start: "select current_date;"
+on-run-end: "select current_date;"
+
 models:
   my_new_project:
+    pre-hook:
+      - "select current_data;"
+    post-hook:
+      - "select current_date;"
     incremental_load:
       +materialized: table
     first_models:
