--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,7 +24,8 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 vars:
-  snfwarehouse: "compute_wkkkh"
+  hist_load: "true"
+  snfwarehouse: "compute_wh"
 
 
 # Configuring models
