--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,7 +25,7 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 vars:
   hist_load: "true"
-  snfwarehouse: "compute_wh"
+  snfwarehouse: "compute_whl"
 
 
 # Configuring models
