--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,8 +24,8 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 vars:
-  hist_load: "true"
-  snfwarehouse: "compute_whl"
+  hist_load: ""
+  snfwarehouse: ""
 
 
 # Configuring models
